# livetranscription

./: .gitignore  FEATURE_IDEAS.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml  start.sh
src/livetranscription/: api_models.py  chunk_watcher.py  cli.py  coaching.py  events.py  ffmpeg_capture.py  meeting_prep.py  server.py  session_store.py  summarize.py  transcribe.py
tests/: test_genai_sdk.py
web/: index.html  package.json  vite.config.js
web/src/: App.svelte  app.css
web/src/components/: ChatPanel.svelte  CoachingPanel.svelte  MeetingPrep.svelte  SessionControls.svelte  SessionList.svelte  Transcript.svelte
web/src/lib/: api.js  stores.js  websocket.js
